--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,12 @@
             margin-top: 50px;
         }
     </style>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-1.7.1.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-play-1.7.1.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
+    <script type="text/javascript" src="@routes.Application.javascriptRoutes()"></script>
 </head>
 <body>
 <header>
